# VastTakeHome

./: CMakeLists.txt  README.md
src/: Constants.h  Event.h  MiningTruck.cpp  MiningTruck.h  MiningTruckStats.h  OperationClock.cpp  OperationClock.h  Stats.cpp  Stats.h  UnloadStation.cpp  UnloadStation.h  main.cpp
tests/: Event.cpp  MiningTruck.cpp  OperationClockTest.cpp  UnloadStation.cpp
